[tool.poetry]
name = "c-base-org-lektor"
version = "0.1.0"
description = "A c-base.org based in the lektor static site generator."
authors = ["Uwe Kamper <me@uwekamper.de>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
setuptools = "^78.1.0"
lektor = "^3.3.7"

[tool.poetry.dev-dependencies]
pytest = "^7.2.1"
flake8 = "^5.0.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
