[project]
name = "c-base-org-lektor"
version = "0.1.0"
description = "A c-base.org based in the lektor static site generator."
authors = [{ name = "Uwe Kamper", email = "me@uwekamper.de" }]
requires-python = ">=3.9"
license = "MIT"
dependencies = [
    "setuptools >=78.1.0, <79",
    "lektor >=3.3.7, <4",
]

[dependency-groups]
dev = [
    "pytest >=7.2.1, <8",
    "flake8 >=5.0.4, <6",
]

