[project]
name = "c-base-org-lektor"
version = "1.0.0"
description = "A c-base.org based in the lektor static site generator."
authors = [{ name = "Uwe Kamper", email = "uk@c-base.org" }]
requires-python = ">=3.9"
license = "MIT"
dependencies = [
    "setuptools >=78.1.0, <79",
    "Lektor >=3.3.12, <4",
]

# Needed for `uv pip install .` to work without a real Python package
[tool.setuptools]
py-modules = []

[dependency-groups]
dev = [
    "pytest >=7.2.1, <8",
    "flake8 >=5.0.4, <6",
]

